Start migrating to new activity-system

--- a/resources/assets/vsvillage/lang/cs.json
+++ b/resources/assets/vsvillage/lang/cs.json
@@ -9,9 +9,181 @@
     "item-creature-humanoid-villager-female-farmer": "Farmář (žena)",
     "item-creature-humanoid-villager-male-shepherd": "Pastýř (muž)",
     "item-creature-humanoid-villager-female-shepherd": "Pastýř (žena)",
+    "item-creature-humanoid-villager-male-herbalist": "Bylinkář (muž)",
+    "item-creature-humanoid-villager-female-herbalist": "Bylinkářka (žena)",
+    "item-creature-humanoid-villager-male-mayor": "Starosta (muž)",
+    "item-creature-humanoid-villager-female-mayor": "Starostka (žena)",
+    "item-creature-humanoid-villager-male-trader": "Obchodník (muž)",
+    "item-creature-humanoid-villager-female-trader": "Obchodnice (žena)",
+    "item-dead-creature-humanoid-villager-male-soldier": "Mrtvý Voják (muž)",
+    "item-dead-creature-humanoid-villager-female-soldier": "Mrtvý Voják (žena)",
+    "item-dead-creature-humanoid-villager-male-archer": "Mrtvý Lukostřelec (muž)",
+    "item-dead-creature-humanoid-villager-female-archer": "Mrtvá Lukostřelkyně (žena)",
+    "item-dead-creature-humanoid-villager-male-smith": "Mrtvý Kovář (muž)",
+    "item-dead-creature-humanoid-villager-female-smith": "Mrtvá Kovářová (žena)",
+    "item-dead-creature-humanoid-villager-male-farmer": "Mrtvý Farmář (muž)",
+    "item-dead-creature-humanoid-villager-female-farmer": "Mrtvá Farmářka (žena)",
+    "item-dead-creature-humanoid-villager-male-shepherd": "Mrtvý Pastýř (muž)",
+    "item-dead-creature-humanoid-villager-female-shepherd": "Mrtvá Pastýřka (žena)",
+    "item-dead-creature-humanoid-villager-male-herbalist": "Mrtvý Bylinkář (muž)",
+    "item-dead-creature-humanoid-villager-female-herbalist": "Mrtvá Bylinkářka (žena)",
+    "item-dead-creature-humanoid-villager-male-mayor": "Mrtvý Starosta (muž)",
+    "item-dead-creature-humanoid-villager-female-mayor": "Mrtvá Starostka (žena)",
+    "item-dead-creature-humanoid-villager-male-trader": "Mrtvý Obchodník (muž)",
+    "item-dead-creature-humanoid-villager-female-trader": "Mrtvá Obchodice (žena)",
+    "item-villagerhorn": "Povolávací roh",
+    "itemdesc-villagerhorn": "Lze použít k přivolání pomoci",
+    "interact-villager-horn": "Miřte na zem poblíž a foukněte, abyste přivolali pomoc a osvobodili vesničana z rezavého světa!",
+    "villagerguide-title": "Vesnice a vesničané",
+    "villagerguide-text": "<strong>Vesnice a vesničané</strong>\n\nPři cestování po světě můžete narazit na vesnice. Lidé, kteří se v těchto vesnicích potulují, jsou obecně přátelští, pokud nejsou provokováni. Někteří s vámi budou obchodovat, jiní vás možná ochrání před zlými nepřáteli. Většina z nich bude během dne vykonávat nějaké drobné úkoly v závislosti na svém povolání.\n\nExistuje také možnost založit si vlastní vesnici. Stačí si vyrobit <a href=\"handbook://item-vsvillage:villagerhorn\">roh</a> a foukněte do něj, abyste přivolali vesnického obchodníka. Prodává všechny předměty, které vaši vesničané budou potřebovat, jako jsou pracovní stanice, postele a ohniště, kolem kterého se mohou shromáždit. Pracovní stanice starosty by měla být prvním blokem, který si koupíte.\n\npokud máte <a href=\"https://mods.vintagestory.at/vsquest\">VS Úkol</a> nainstalován, budete dokonce moci přijímat úkoly od různých vesničanů. \n\nJakmile přivoláte několik vesničanů, budete jim muset poskytnout přístřeší. Každý vesničan chce mít postel, ve které bude moci v noci spát, a <a href=\"handbooksearch://workstation\">pracovní stůl</a> aby byli během dne zaměstnaní.\nVaši vesničané se také rádi scházejí v <a href=\"handbook://block-vsvillage:brazier-extinct\">ohniště</a> během večera, abychom se trochu seznámili.\n\nAby se mohli orientovat, využívají vesničané <a href=\"handbook://block-vsvillage:waypoint\">. Můžete je umístit do své vesnice, aby jim pomohly s orientací. Chcete-li zkontrolovat, zda jsou správně propojeny, zadejte příkaz /highlightvillagewaypoints a podívejte se, zda se rozsvítí cesta mezi nimi. Waypointy se pokusí propojit pouze v případě, že jsou od sebe vzdáleny méně než 50 bloků a jsou propojeny cestou bloky nebo bloky udusané hlíny.",
+    "block-workstation-soldier-*": "Pracovní stůl (voják)",
+    "block-workstation-smith-*": "Pracovní stůl (kovář)",
+    "block-workstation-farmer-*": "Pracovní stůl (farmář)",
+    "block-workstation-shepherd-*": "Pracovní stůl (pastýř)",
+    "block-workstation-herbalist-*": "Pracovní stůl (bylinkář)",
+    "block-workstation-mayor-*": "Pracovní stůl (starosta)",
+    "block-workstation-trader-*": "Pracovní stůl (obchodník)",
+    "block-villagebed-*": "Postel pro vesničany",
+    "block-brazier-*": "Koš na oheň",
+    "block-waypoint": "Orientační bod",
     "command-stay": "Zůstaň tady!",
     "command-follow": "Následuj mě!",
     "manage-village": "Spravovat Vesnici",
+    "management-title": "Správa vesnice",
+    "tab-management-residents": "Obyvatelé",
+    "tab-management-structures": "Struktury",
     "tab-management-stats": "Statistiky",
-    "management-village-name": "Jméno:"
+    "tab-management-destroy": "Zničit",
+    "tab-management-hire": "Najmout",
+    "management-destroy-village-text": "Jste si jistí, že chcete tuto vesnici trvale zničit?",
+    "management-destroy-village-button": "Zničit vesnici",
+    "management-update-village-button": "Aktualizovat vesnici",
+    "management-no-village-found": "Tento blok není v současné době připojen k žádné vesnici. Chcete založit novou?",
+    "management-village-name": "Jméno:",
+    "management-village-radius": "Poloměr:",
+    "management-found-new-village": "Nalezena nová vesnice",
+    "management-select-structure": "Vyberte strukturu.",
+    "management-remove-structure": "Odebrat strukturu",
+    "management-structure-note": "Typ konstrukce: {0}\nAktuální vlastník {1}\nUmístění: {2}",
+    "management-select-villager": "Vyberte vesničana.",
+    "management-remove-villager": "Odstranit vesničana",
+    "management-villager-note": "Jméno: {0}\nProfese: {1}\nNaposledy viděn v: {2}\nPracuje v: {3}\nSpí v: {4}",
+    "management-emtpy": "Vesnice vypadá prázdná.",
+    "management-hire-farmer": "Najmout farmáře",
+    "management-hire-shepherd": "Najmout pastýře",
+    "management-hire-trader": "Najmout obchodníka",
+    "management-hire-smith": "Najmout kováře",
+    "management-hire-soldier": "Najmout vojáka",
+    "management-hire-herbalist": "Najmout bylinkáře",
+    "management-hire-mayor": "Najmout starostu",
+    "management-hire-archer": "Najmout lukostřelce",
+    "management-poi-stats": "Tato vesnice má celkem <strong>{0} lůžka</strong>, <strong>{1} pracovní stanice</strong> a <strong>{2} shromaždiště</strong>.\nJe to sídlo <strong>{3} vesničanů</strong>.\nObyvatelé vesnice a pracovní stanice jsou rozděleni následujícím způsobem:\n",
+    "management-profession-stats": "Profese: <strong>{0}</strong>\t Vesničané: {1}\t Pracovní stanice: {2}\n",
+    "management-profession-farmer": "farmář",
+    "management-profession-shepherd": "pastýř",
+    "management-profession-trader": "obchodník",
+    "management-profession-smith": "kovář",
+    "management-profession-soldier": "voják",
+    "management-profession-herbalist": "bylinkář",
+    "management-profession-mayor": "starosta",
+    "lives-in": "Místo bydliště {0}.",
+    "lives-in-debug": "Místo bydliště: {0}.\nPracuje v: {1}\nSpí v: {2}",
+    "nowhere": "nikde",
+    "resides-in": "Patří k {0}.",
+    "owned-by": "Vlastní {0}.",
+    "nobody": "nikdo",
+    "everybody": "všichni",
+    "missing-in-action": "Ztracený ve službě",
+    "quest-gatherMeatForSeed-title": "Maso za osivo",
+    "quest-gatherMeatForSeed-desc": "Moje strava by mohla být trochu pestřejší. Pokud mi poskytnete 25 kusů masa jakéhokoli druhu, mohl bych vám na oplátku nabídnout nějaké semena.",
+    "quest-gatherMeatForSeed-obj": "Shromážděné maso: {0}/25",
+    "quest-gatherMeatForGrain-title": "Svaly z obilí",
+    "quest-gatherMeatForGrain-desc": "Moje strava by mohla být trochu pestřejší. Pokud mi poskytnete 20 kusů masa jakéhokoli druhu, mohu vám na oplátku nabídnout nějaké obilí.",
+    "quest-gatherMeatForGrain-obj": "Shromážděné maso: {0}/20",
+    "quest-gather10MeatFor4FlaxSeeds-title": "Vláknina z lnu neobsahuje žádné bílkoviny",
+    "quest-gather10MeatFor4FlaxSeeds-desc": "Moje strava by mohla být trochu pestřejší. Pokud mi poskytnete 10 kusů masa jakéhokoli druhu, mohu vám na oplátku nabídnout semena.",
+    "quest-gather10MeatFor4FlaxSeeds-obj": "Shromážděné maso: {0}/10",
+    "quest-gather10MeatFor4ParsnipSeeds-title": "V pastináku nejsou žádné bílkoviny",
+    "quest-gather10MeatFor4ParsnipSeeds-desc": "Moje strava by mohla být trochu pestřejší. Pokud mi poskytnete 10 kusů masa jakéhokoli druhu, mohu vám na oplátku nabídnout semena.",
+    "quest-gather10MeatFor4ParsnipSeeds-obj": "Shromážděné maso: {0}/10",
+    "quest-gather10MeatFor4TurnipSeeds-title": "V tuřínu nejsou žádné bílkoviny",
+    "quest-gather10MeatFor4TurnipSeeds-desc": "Moje strava by mohla být trochu pestřejší. Pokud mi poskytnete 10 kusů masa jakéhokoli druhu, mohl bych vám za to něco nabídnout.",
+    "quest-gather10MeatFor4TurnipSeeds-obj": "Shromážděné maso: {0}/10",
+    "quest-gather10MeatFor4CarrotSeeds-title": "V mrkvi nejsou žádné bílkoviny",
+    "quest-gather10MeatFor4CarrotSeeds-desc": "Moje strava by mohla být trochu pestřejší. Pokud mi poskytnete 10 kusů masa jakéhokoli druhu, mohu vám na oplátku nabídnout semena.",
+    "quest-gather10MeatFor4CarrotSeeds-obj": "Shromážděné maso: {0}/10",
+    "quest-gather10MeatFor4OnionSeeds-title": "V cibuli nejsou žádné bílkoviny",
+    "quest-gather10MeatFor4OnionSeeds-desc": "Moje strava by mohla být trochu pestřejší. Pokud mi poskytnete 10 kusů masa jakéhokoli druhu, mohu vám na oplátku nabídnout semena.",
+    "quest-gather10MeatFor4OnionSeeds-obj": "Shromážděné maso: {0}/10",
+    "quest-gather10MeatFor4SpeltSeeds-title": "V obilí nejsou žádné bílkoviny",
+    "quest-gather10MeatFor4SpeltSeeds-desc": "Moje strava by mohla být trochu pestřejší. Pokud mi poskytnete 10 kusů masa jakéhokoli druhu, mohu vám na oplátku nabídnout semena.",
+    "quest-gather10MeatFor4SpeltSeeds-obj": "Shromážděné maso: {0}/10",
+    "quest-cull2HaresFor20Carrots-title": "Problém s zajíci",
+    "quest-cull2HaresFor20Carrots-desc": "Ti hrozný zajíci mi pořád žerou úrodu. Zbav se jich a já se s tebou podělím o mrkev.",
+    "quest-cull2HaresFor20Carrots-obj": "Zabité zajíce: {0}/2",
+    "quest-cull2HaresFor20Spelt-title": "Problém s zajíci",
+    "quest-cull2HaresFor20Spelt-desc": "Ti hrozný zajíci mi pořád žerou úrodu. Zbav se jich a já se s tebou podělím o špaldu.",
+    "quest-cull2HaresFor20Spelt-obj": "Zabité zajíce: {0}/2",
+    "quest-sell1CheesewheelFor4Gears-title": "K chlebu bych si dal sýr",
+    "quest-sell1CheesewheelFor4Gears-desc": "Vyrobil jsem několik ozubených kol od míjejícího cestovatele. Rád bych od vás koupil nějaký sýr, pokud máte nějaké kolo navíc.",
+    "quest-sell1CheesewheelFor4Gears-obj": "Shromážděný kulatý sýr: {0}/1",
+    "quest-gather12CharcoalFor4Gears-title": "Kovárna dnes zůstává studená",
+    "quest-gather12CharcoalFor4Gears-desc": "Chci vyrobit nějaké nové železné nástroje, ale zapomněl jsem připravit dřevěné uhlí. Mohl bys mi pomoci sehnat nějaké uhlí? Zaplatím ti za to.",
+    "quest-gather12CharcoalFor4Gears-obj": "Shromážděné uhlí: {0}/12",
+    "quest-buy1BlackGuardSword-title": "Vytvoření zbraně velké síly",
+    "quest-buy1BlackGuardSword-desc": "Pokud mi předáte materiály a zaplatíte mi za mou práci, mohu pro vás vyrobit zbraň výjimečné kvality.",
+    "quest-buy1BlackGuardSword-obj": "Shromážděné ingoty železa: {0}/1\nShromážděné dřevěné uhlí: {1}/1\nShromážděné rezavé ozubené kolečka: {2}/4",
+    "quest-upgradeGambison-title": "Vylepšená gambison",
+    "quest-upgradeGambison-desc": "Po zaplacení a dodání gambisonu bych ho mohl upravit, aby vám lépe seděl.",
+    "quest-upgradeGambison-obj": "Gambison hlava: {0}/1\nGambison tělo: {1}/1\nGambison nohy: {2}/1\nShromážděné rezavé ozubené kola: {3}/32",
+    "quest-gather16HayFor1BlueCheesewheel-title": "Seno pro modrý sýr",
+    "quest-gather16HayFor1BlueCheesewheel-desc": "Potřebuji pomoc se sběrem sena pro dobytek, nasbírejte ho 16 kusů a já vám dám trochu sýra ze svých zásob.",
+    "quest-gather16HayFor1BlueCheesewheel-obj": "Shromážděné Seno: {0}/16",
+    "quest-gather16HayFor1CheddarCheesewheel-title": "Seno za sýr čedar",
+    "quest-gather16HayFor1CheddarCheesewheel-desc": "Potřebuji pomoc se sběrem sena pro dobytek, nasbírejte ho 16 kusů a já vám dám trochu sýra ze svých zásob.",
+    "quest-gather16HayFor1CheddarCheesewheel-obj": "Shromážděné Seno: {0}/16",
+    "quest-gather6GrainFor12Eggs-title": "Obilí za tucet vajec",
+    "quest-gather6GrainFor12Eggs-desc": "Moje slepice potřebují více zrn aby mohly dál snášet tolik vajec. Rád vám dám tucet vajec za nějaké zrna.",
+    "quest-gather6GrainFor12Eggs-obj": "Shromážděné Zrno: {0}/6",
+    "quest-gather24GrainFor18Poultry-title": "Zrno za kuřecí maso",
+    "quest-gather24GrainFor18Poultry-desc": "Moje slepice zestárly a ztloustly. Potřebuji udělat místo pro mladší generace, aby mohly správně růst. Za trochu zrn vám mohu nabídnout nějaké maso.",
+    "quest-gather24GrainFor18Poultry-obj": "Shromážděné Zrno: {0}/24",
+    "quest-gather24GrainFor18Redmeat-title": "Zrno za červené maso",
+    "quest-gather24GrainFor18Redmeat-desc": "Moje ovce zestárly a ztloustly. Potřebuji udělat místo pro mladší generace, aby mohly správně růst. Za trochu zrn vám mohu nabídnout nějaké maso.",
+    "quest-gather24GrainFor18Redmeat-obj": "Shromážděné Zrno: {0}/24",
+    "quest-kill2WolvesFor8Gears-title": "Ochraňujte dobytek",
+    "quest-kill2WolvesFor8Gears-desc": "Vlci ztrácejí respekt před ohněm. Přibližují se stále blíž a blíž k dobytku, který pasu. Můžu vám to vynahradit, když je odrazíte.",
+    "quest-kill2WolvesFor8Gears-obj": "Zabiti vlci: {0}/2",
+    "quest-kill3FoxesFor8Gear-title": "Chraňte slepice",
+    "quest-kill3FoxesFor8Gear-desc": "Nedávno se mi do kurníku vloupala liška a zdecimovala mi drůbež. Nechci, aby se to opakovalo. Pokud někdo dokáže ulovit šest takových lišek, jsem ochoten za to zaplatit rezavé ozubené kolečka.",
+    "quest-kill3FoxesFor8Gear-obj": "Zabité lišky: {0}/3",
+    "quest-kill50DriftersFor20Gears-title": "Třes z jiného světa",
+    "quest-kill50DriftersFor20Gears-desc": "Lesy už prostě nejsou bezpečné. Tuláci jsou všude. Pokud byste mohli vyčistit okolí od tuláků, zaplatili bychom vám za to slušnou cenu.",
+    "quest-kill50DriftersFor20Gears-obj": "Zabito tuláků: {0}/50",
+    "quest-kill2NightmareDriftersFor12Gears-title": "Řev z nevyslovitelných hlubin",
+    "quest-kill2NightmareDriftersFor12Gears-desc": "Z hor již nemůžeme těžit nerostné suroviny kvůli tvorům, kteří se skrývají v hlubokých jeskyních. Jsme ochotni zaplatit velkorysou odměnu každému, kdo nám pomůže vyčistit hlubiny od nočních můr.",
+    "quest-kill2NightmareDriftersFor12Gears-obj": "Zabité noční můry tuláků: {0}/2",
+    "quest-recruitvillager-title": "K vašim službám",
+    "quest-recruitvillager-desc": "Za malou částku vás mohu doprovázet a chránit po celý den.",
+    "quest-recruitvillager-obj": "Rezavé ozubené kolečka: {0}/2",
+    "quest-repairingAnOldSet1-title": "Nová měděná jehla",
+    "quest-repairingAnOldSet1-desc": "Potřebuji měděný ingot na výrobu nové lékařské jehly. Mám starou sadu brnění, kterou ti mohu dát po kouskách, pokud se mnou budeš dál spolupracovat.",
+    "quest-repairingAnOldSet1-obj": "Shromážděné měděné ingoty {0}/1",
+    "quest-repairingAnOldSet2-title": "Lněné vlákno na dírky",
+    "quest-repairingAnOldSet2-desc": "Potřebuji trochu lněných vláken, abych mohl vyrobit obvazy a opravit díru v této zbroji, kterou ti dávám.",
+    "quest-repairingAnOldSet2-obj": "Shromážděné lněné vlákno {0}/12",
+    "quest-repairingAnOldSet3-title": "Jídlo na zimu",
+    "quest-repairingAnOldSet3-desc": "Pokud mi seženeš jídlo na zimu, dám ti poslední kus brnění, který mám.",
+    "quest-repairingAnOldSet3-obj": "Shromážděná zelenina {0}/32",
+    "quest-sell24HorsetailFor3Gears-title": "Potřeba přesličky",
+    "quest-sell24HorsetailFor3Gears-desc": "Zásoby docházejí a potřebuji další přesličky, samozřejmě zaplatím.",
+    "quest-sell24HorsetailFor3Gears-obj": "Shromážděné přesličky: {0}/24",
+    "quest-sell10PowderedSulfurFor2Gears-title": "Potřeba práškové síry",
+    "quest-sell10PowderedSulfurFor2Gears-desc": "Zásoby docházejí a potřebuji další síru v prášku, samozřejmě zaplatím.",
+    "quest-sell10PowderedSulfurFor2Gears-obj": "Prášková síra shromážděna: {0}/10",
+    "quest-healplayersetup-title": "Vytvoření zásob před hojením",
+    "quest-healplayersetup-desc": "Abych mohl působit jako váš léčitel, potřebuji několik základních věcí. Materiál na obvazy, kámen a tyč na drcení bylin a medovou plástev k ošetření ran. Jakmile mi tyto základní věci seženete, budu schopen se o sebe postarat sám.",
+    "quest-healplayersetup-obj": "Shromážděné přesličky: {0}/12\nShromážděný kamen: {1}/1\nShromážděný klacek: {2}/1\nShromážděný med: {3}/2\nShromážděné orobince: {0}/12",
+    "quest-healplayer-title": "Návštěva u doktora",
+    "quest-healplayer-desc": "Pokud někdy dostaneš nakládačku, můžu se podívat na tvé zranění."
 }
