--- a/resources/assets/vsvillage/lang/es-es.json
+++ b/resources/assets/vsvillage/lang/es-es.json
@@ -1,4 +1,5 @@
 {
+    "item-creature-humanoid-villager-male-soldier": "Soldado (masculino)",
     "tab-management-stats": "Estadísticas",
     "management-village-name": "Nombre:",
     "management-profession-trader": "comerciante"
