--- a/resources/assets/vsvillage/lang/ru.json
+++ b/resources/assets/vsvillage/lang/ru.json
@@ -78,6 +78,7 @@
     "management-hire-mayor": "Нанять старосту",
     "management-hire-archer": "Нанять лучника",
     "management-poi-stats": "В этой деревне имеется в общей сложности <strong>{0} кроватей</strong>, <strong>{1} рабочих станций</strong> и <strong>{2} мест сбора</strong>.\nЭто резиденция <strong>{3} жителей</strong>.\nЖители и рабочие станции разделены следующим образом:\n",
+    "management-profession": "",
     "management-profession-stats": "Профессия: <strong>{0}</strong>\t Поселенцев: {1}\t Рабочих станций: {2}\n",
     "management-profession-farmer": "фермер",
     "management-profession-shepherd": "пастух",
@@ -185,5 +186,6 @@
     "quest-healplayersetup-desc": "Здравствуй, Друг. Хорошее у вас тут местечко, конечно, но всё же для работы мне не хватает некоторого оборудования. Чтобы начать лечить людей, мне понадобятся как минимум несколько камней и палок, для измельчения трав, а так же Восковых Сот и Хвощ.",
     "quest-healplayersetup-obj": "Хвоща Добыто: {0}/12\nКамней Добыто: {1}/1\nПалок Добыто: {2}/1\nВосковых Сот Добыто: {3}/2\nРогоза Добыто: {0}/12",
     "quest-healplayer-title": "Визит к Доктору",
-    "quest-healplayer-desc": "Выглядишь не очень... Я могу глянуть на твои раны, если позволишь."
+    "quest-healplayer-desc": "Выглядишь не очень... Я могу глянуть на твои раны, если позволишь.",
+    "dialogue-greet": "?"
 }
